# nado-rust-sdk

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
examples/: basic_usage.rs  client_config.rs  digest.rs  no_signer.rs  orders.rs  place_and_cancel.rs  place_order_websocket.rs  product_ids_and_symbols.rs
src/: lib.rs  main.rs  nado_client.rs
src/builders/: mod.rs
src/builders/execute/: burn_nlp.rs  burn_vlp.rs  cancellation.rs  cancellation_products.rs  deposit_collateral.rs  deposit_insurance.rs  link_signer.rs  liquidate_subaccount.rs  mint_nlp.rs  mint_vlp.rs  mod.rs  place_order.rs  slow_mode.rs  transfer_quote.rs  withdraw_collateral.rs
src/builders/indexer/: account_snapshots.rs  candlesticks.rs  events.rs  foundation_taker_rewards.rs  historical_orders.rs  interest_and_funding.rs  leaderboard.rs  maker_statistics.rs  market_net_fees.rs  market_snapshots.rs  matches.rs  matches_and_liquidations.rs  mod.rs  multi_product_snapshots.rs  nlp_funding_payment.rs  nlp_interest_payment.rs  nlp_snapshots.rs  product_snapshots.rs  rewards.rs  subaccounts.rs  trades.rs
src/builders/query/: max_nlp_burnable.rs  max_nlp_mintable.rs  max_order_size.rs  max_vlp_mintable.rs  mod.rs  (+3 more)
src/core/: base.rs  builder.rs  execute.rs  indexer.rs  mod.rs  query.rs
src/nado_utils/: alloy_compat.rs  eip712_alloy.rs  eip712_structs.rs  engine.rs  indexer.rs  isolated.rs  math.rs  mod.rs  product.rs  provider.rs  revert.rs  serialize_utils.rs  subaccount_info.rs  trigger.rs  tx.rs
src/sanity/: execute.rs  indexer.rs  query.rs
src/utils/: client_mode.rs  client_utils.rs  constants.rs  deployment.rs  deposit.rs  nonce.rs  response.rs  rest.rs  signer.rs
(+22 files in other folders)
